[project]
name = "post-training-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0",
    "huggingface-hub>=0.33.4",
    "numpy==1.26.4",
    "pandas==2.3.1",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "transformers==4.52.4",
    "trl==0.19.0",
    "wandb>=0.21.0",
    "yapf>=0.43.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "default"
url = " https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.ruff]
line-length = 120  # Set your desired line length here

[tool.uv]
no-build-isolation-package = ['flash-attn', 'setuptools']
